--- a/client/src/app/maintenance/maintenance.component.html
+++ b/client/src/app/maintenance/maintenance.component.html
@@ -1,1 +1,24 @@
-//todo: Complete missing code..
+<!-- <div>
+    <h1>Manage Maitainence</h1>
+</div>
+<div>
+    <input type="text" (input)="getMaintenance($event)" placeholder="Maintenance Information">
+</div>
+<div>
+    <table>
+        <thead>
+            <th>Sr#</th>
+            <th>Schedule Date</th>
+            <th>Completion Date</th>
+            <th>Status</th>
+            <th>Equipment</th>
+            <th>Hospital</th>
+            <th>Action</th>
+        </thead>
+        <tbody>
+            <tr *ngFor="let">
+
+            </tr>
+        </tbody>
+    </table>
+</div> -->
