--- a/client/src/app/createhospital/createhospital.component.html
+++ b/client/src/app/createhospital/createhospital.component.html
@@ -1,61 +1,142 @@
-<div class="container">
-    <h2>Create Hospital</h2>
-    <form [formGroup]="itemForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="name">Hospital Name</label>
-        <input type="text" id="name" formControlName="name" class="form-control" />
-        <div *ngIf="itemForm.get('name')?.invalid && itemForm.get('name')?.touched">
-          Hospital name is required.
+<div class="d-flex justify-content-between mt-4">
+  <h2 class="mb-0">Manage Hospital</h2>  
+
+</div>
+<div class="row mt-3">
+  <div class="card">
+      <div class="card-header">
+      Add Hospital
         </div>
+      <div class="card-body">
+          <form class="mb-3 mt-md-4" [formGroup]="itemForm" (ngSubmit)="onSubmit()">
+              <div class="row">
+                  <div class="col-md-5">
+                      <div class="mb-3">
+                          <label for="content" class="form-label ">Name</label>
+                          <input type="content" name ="name"formControlName="name" [(ngModel)]="formModel.name" class="form-control" id="name" placeholder="name">
+                          <div *ngIf="itemForm.controls['name'].invalid && (itemForm.controls['name'].dirty || itemForm.controls['name'].touched)"
+                          class="ng-dirty">
+                          <span *ngIf="itemForm.controls['name'].errors">
+                            <span class="text-danger">Please Enter name .</span>
+                          </span>
+                        </div>
+                        </div>
+                  </div>
+                  <div class="col-md-5">
+                      <div class="mb-3">
+                          <label for="location" class="form-label ">Location</label>
+                          <input type="location" name="location"  formControlName="location" [(ngModel)]="formModel.location" class="form-control" id="location" placeholder="location">
+                          <div *ngIf="itemForm.controls['location'].invalid && (itemForm.controls['location'].dirty || itemForm.controls['location'].touched)"
+                          class="ng-dirty">
+                          <span *ngIf="itemForm.controls['location'].errors">
+                            <span class="text-danger">Please Enter location .</span>
+                          </span>
+                        </div>
+                        </div>
+                  </div>
+               
+                  <div class="col-md-2">
+                      <div class="d-grid">
+                          <br>
+                          <button class="btn btn-outline-dark mt-1" type="submit">Submit</button>
+                        </div>
+                  </div>
+              </div>
+           
+             
+           
+             
+            </form>
       </div>
-      <div class="form-group">
-        <label for="location">Location</label>
-        <input type="text" id="location" formControlName="location" class="form-control" />
-        <div *ngIf="itemForm.get('location')?.invalid && itemForm.get('location')?.touched">
-          Location is required.
-        </div>
-      </div>
-      <button type="submit" class="btn btn-primary" [disabled]="itemForm.invalid">Create Hospital</button>
-    </form>
-  
-    <div *ngIf="showMessage" class="alert alert-success">
-      {{ responseMessage }}
-    </div>
-    <div *ngIf="showError" class="alert alert-danger">
-      {{ errorMessage }}
-    </div>
-  
-    <h2>Add Equipment</h2>
-    <form [formGroup]="equipmentForm" (ngSubmit)="submitEquipment()">
-      <div class="form-group">
-        <label for="equipmentName">Equipment Name</label>
-        <input type="text" id="equipmentName" formControlName="equipmentName" class="form-control" />
-        <div *ngIf="equipmentForm.get('equipmentName')?.invalid && equipmentForm.get('equipmentName')?.touched" >
-          Equipment name is required.
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="quantity">Quantity</label>
-        <input type="number" id="quantity" formControlName="quantity" class="form-control" />
-        <div *ngIf="equipmentForm.get('quantity')?.invalid && equipmentForm.get('quantity')?.touched">
-          Quantity is required.
-        </div>
-      </div>
-      <button type="submit" class="btn btn-primary" [disabled]="equipmentForm.invalid">Add Equipment</button>
-    </form>
-  
-    <div *ngIf="showMessage" class="alert alert-success">
-      {{ responseMessage }}
-    </div>
-    <div *ngIf="showError" class="alert alert-danger">
-      {{ errorMessage }}
-    </div>
-  
-    <h2>Hospital List</h2>
-    <ul>
-      <li *ngFor="let hospital of hospitalList">
-        {{ hospital.name }} - {{ hospital.location }}
-      </li>
-    </ul>
   </div>
+</div>
+<div class="row mt-3">
+  <div class="card">
+      <div class="card-header">Hospital Information</div>
+  </div>
+  <div class="card-body">
+      <div class="table-responsive">
+          <table class="table">
+              <thead>
+                  <tr>
+                      <th>Sr#</th>
+                      <th>Hospital Name</th>
+                      <th>Location</th>
+                 
+                      <th>Action</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr *ngFor="let hospital of hospitalList">
+                    <td>{{hospital.id}}</td>
+                      <td>{{hospital.name}}</td>
+                      <td>{{hospital.location}}</td>
+               
+                      <td>
+                          <button data-bs-toggle="modal" (click)="Addequipment(hospital)" data-bs-target="#driverModal" class="btn btn-primary">Assign Equipments</button>
+                      </td>
+                  </tr>
+              </tbody>
+          </table>
+      </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="driverModal" tabindex="-1" aria-labelledby="driverModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="driverModalLabel">Assign Equipment </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+          <form class="mb-3 mt-md-4" [formGroup]="equipmentForm" (ngSubmit)="submitEquipment()">
+              <div class="row">
+                  <div class="col-md-12">
+                      <div class="mb-3">
+                          <input type="hidden" name="hospitalId" id="hospitalId" formControlName="hospitalId" >
+                          <label for="content" class="form-label ">Name</label>
+                          <input type="content" name ="name"formControlName="name" [(ngModel)]="formModel.name" class="form-control" id="name" placeholder="name">
+                          <div *ngIf="equipmentForm.controls['name'].invalid && (equipmentForm.controls['name'].dirty || equipmentForm.controls['name'].touched)"
+                          class="ng-dirty">
+                          <span *ngIf="equipmentForm.controls['name'].errors">
+                            <span class="text-danger">Please Enter name .</span>
+                          </span>
+                        </div>
+                        </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-md-12">
+                          <div class="mb-3">
+                              <label for="description" class="form-label ">Description</label>
+                              <input type="text" name="description"  formControlName="description" [(ngModel)]="formModel.description" class="form-control" id="description" placeholder="description">
+                              <div *ngIf="equipmentForm.controls['description'].invalid && (equipmentForm.controls['description'].dirty || equipmentForm.controls['description'].touched)"
+                              class="ng-dirty">
+                              <span *ngIf="equipmentForm.controls['description'].errors">
+                                <span class="text-danger">Please Enter description .</span>
+                              </span>
+                            </div>
+                            </div>
+                      </div>
+                  </div>
+               
+                 
+              </div>
+              <div *ngIf="showMessage" class="alert alert-success mt-4" role="alert">
+                {{responseMessage}}
+              </div>
+              <div *ngIf="showError" class="alert alert-danger" role="alert">
+                {{errorMessage}}
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="submit" class="btn btn-primary" >Save</button>
+                </div>
+            </form>
+      </div>
+     
+    </div>
+  </div>
+</div>
   
