--- a/client/src/app/registration/registration.component.html
+++ b/client/src/app/registration/registration.component.html
@@ -1,54 +1,78 @@
-<div class="container">
-    <h2>Register</h2>
-  
-    <!-- Response Message -->
-    <div *ngIf="showMessage" class="alert" [ngClass]="{'alert-success': responseMessage.includes('successful'), 'alert-danger': responseMessage.includes('failed')}">
-      {{ responseMessage }}
-    </div>
-  
-    <!-- Registration Form -->
-    <form [formGroup]="itemForm" (ngSubmit)="onRegister()">
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" formControlName="username" class="form-control" />
-            <div *ngIf="itemForm.get('username')?.invalid && itemForm.get('username')?.touched" class="text-danger">
-              Username is required.
+<div class="vh-100 d-flex justify-content-center align-items-center">
+  <div class="container">
+    <div class="row d-flex justify-content-center">
+      <div class="col-12 col-md-8 col-lg-6">
+        <div class="border border-3 border-primary"></div>
+        <div class="card bg-white">
+          <div class="card-body p-5">
+ 
+            <form class="mb-3 mt-md-4" [formGroup]="itemForm" (ngSubmit)="onRegister()">
+              <h2 class="fw-bold mb-2 text-uppercase ">Medical Equipment & Tracking System</h2>
+              <p class=" mb-5">Please enter your details here</p>
+              <div class="mb-3">
+                <label for="username" class="form-label ">Username</label>
+                <input type="text" name="username" formControlName="username" class="form-control" id="username"
+                  placeholder="Username">
+                <div
+                  *ngIf="itemForm.get('username')?.invalid && (itemForm.get('username')?.dirty || itemForm.get('username')?.touched)"
+                  class="ng-dirty">
+                  <span class="text-danger">Please Enter UserName.</span>
+                </div>
+              </div>
+ 
+              <div class="mb-3">
+                <label for="email" class="form-label ">Email address</label>
+                <input type="email" name="email" formControlName="email" class="form-control" id="email"
+                  placeholder="name@example.com">
+                <div
+                  *ngIf="itemForm.get('email')?.invalid && (itemForm.get('email')?.dirty || itemForm.get('email')?.touched)"
+                  class="ng-dirty">
+                  <span class="text-danger">Please Enter email.</span>
+                  <span *ngIf="itemForm.errors?.['email']">Not a valid Email</span>
+                </div>
+ 
+              </div>
+ 
+              <div class="mb-3">
+                <label for="password" class="form-label ">Password</label>
+                <input type="password" name="password" formControlName="password" class="form-control" id="password"
+                  placeholder="*******">
+                <div
+                  *ngIf="itemForm.get('password')?.invalid && (itemForm.get('password')?.dirty || itemForm.get('password')?.touched)"
+                  class="ng-dirty">
+                  <span class="text-danger">Please Enter password.</span>
+                </div>
+              </div>
+ 
+              <div class="mb-3">
+                <label for="password" class="form-label ">Role</label>
+                <select class="form-control" formControlName="role">
+                  <option value="null">Choose Role</option>
+                  <option value="HOSPITAL">HOSPITAL</option>
+                  <option value="TECHNICIAN">TECHNICIAN</option>
+                  <option value="SUPPLIER">SUPPLIER</option>
+                </select>
+                <div
+                  *ngIf="itemForm.get('role')?.invalid && (itemForm.get('role')?.dirty || itemForm.get('role')?.touched)"
+                  class="ng-dirty">
+                  <span class="text-danger">Please choose role.</span>
+                </div>
+              </div>
+ 
+              <div class="d-grid">
+                <button class="btn btn-outline-dark" type="submit">Submit</button>
+              </div>
+            </form>
+            <div>
+              <p class="mb-0  text-center"> <a [routerLink]="['/login']" class="text-primary fw-bold">Go to
+                  Login</a></p>
+            </div>
+            <div *ngIf="showMessage" class="alert alert-success mt-4" role="alert">
+              {{responseMessage}}
             </div>
           </div>
-
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" formControlName="password" class="form-control" />
-            <div *ngIf="itemForm.get('password')?.invalid && itemForm.get('password')?.touched" class="text-danger">
-              Password is required (min 6 characters).
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" formControlName="email" class="form-control" />
-            <div *ngIf="itemForm.get('email')?.invalid && itemForm.get('email')?.touched" class="text-danger">
-              Valid email is required.
-            </div>
-          </div>
-      
-      
-      <div class="form-group">
-        <label for="role">Role</label>
-        <select id="role" formControlName="role" class="form-control">
-          <option *ngFor="let role of roles" [value]="role">{{ role }}</option>
-        </select>
-        <div *ngIf="itemForm.get('role')?.invalid && itemForm.get('role')?.touched" class="text-danger">
-          Role is required.
         </div>
       </div>
-  
-      
-      
-  
-      
-      <button type="submit" class="btn btn-primary" [disabled]="itemForm.invalid">Register</button>
-    </form>
-    <a [routerLink]="['/login']">Go to login</a>
+    </div>
   </div>
-  
+</div>
