--- a/client/src/app/requestequipment/requestequipment.component.html
+++ b/client/src/app/requestequipment/requestequipment.component.html
@@ -1,64 +1,75 @@
-<div>
-  <h2>Request</h2>
+<div class="d-flex justify-content-between mt-4">
+  <h2 class="mb-0">Request Equipment</h2>  
 </div>
-<form [formGroup]="itemForm" (ngSubmit)="onSubmit()">
-
-    <div>
-      <label for="status">Status:</label>
-      <input id="status" formControlName="status" type="text">
-      <div *ngIf="itemForm.get('status')?.invalid && itemForm.get('status')?.touched">
-        Status is required.
+<div class="row mt-3">
+  <div class="card">
+      <div class="card-header">
+          Order Equipment
       </div>
-    </div>
-  
-    <div>
-      <label for="name">Name:</label>
-      <input id="name" formControlName="name" type="text">
-      <div *ngIf="itemForm.get('name')?.invalid && itemForm.get('name')?.touched">
-        Name is required.
+      <div class="card-body">
+          <form class="mb-3 mt-md-4" [formGroup]="itemForm" (ngSubmit)="onSubmit()">
+              <div class="row">
+                  <div class="col-md-5">
+                    <div class="mb-3">
+                      <label for="content" class="form-label">Hospitals</label>
+                      <select name="hospitalId" class="form-control" id="hospitalId" formControlName="hospitalId" (change)="onHospitalSelect($event)">
+                        <option value="null">Please Choose</option>
+                        <option *ngFor="let hos of hospitalList" [value]="hos.id">{{ hos.name }}</option>
+                      </select>
+                      <div *ngIf="itemForm.controls['hospitalId'].invalid && (itemForm.controls['hospitalId'].dirty || itemForm.controls['hospitalId'].touched)" class="ng-dirty">
+                        <span *ngIf="itemForm.controls['hospitalId'].errors" class="text-danger">Please choose hospital.</span>
+                      </div>
+                    </div>
+                    <div class="mb-3">
+                      <label for="content" class="form-label">Equipment</label>
+                      <select name="equipmentId" class="form-control" id="equipmentId" formControlName="equipmentId">
+                        <option value="null">Please Choose</option>
+                        <option *ngFor="let eq of equipmentList" [value]="eq.id">{{ eq.name }}</option>
+                      </select>
+                      <div *ngIf="itemForm.controls['equipmentId'].invalid && (itemForm.controls['equipmentId'].dirty || itemForm.controls['equipmentId'].touched)" class="ng-dirty">
+                        <span *ngIf="itemForm.controls['equipmentId'].errors" class="text-danger">Please choose Equipment.</span>
+                      </div>
+                    </div>
+                    <div class="mb-3">
+                      <label for="content" class="form-label">Order Date</label>
+                      <input type="date" name="orderDate" formControlName="orderDate" class="form-control" id="orderDate" placeholder="Order Date">
+                      <div *ngIf="itemForm.controls['orderDate'].invalid && (itemForm.controls['orderDate'].dirty || itemForm.controls['orderDate'].touched)" class="ng-dirty">
+                        <span *ngIf="itemForm.controls['orderDate'].errors" class="text-danger">Please Enter order Date.</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-5">
+                    <div class="mb-3">
+                      <label for="quantity" class="form-label">Quantity</label>
+                      <input type="number" name="quantity" formControlName="quantity" class="form-control" id="quantity" placeholder="Quantity">
+                      <div *ngIf="itemForm.controls['quantity'].invalid && (itemForm.controls['quantity'].dirty || itemForm.controls['quantity'].touched)" class="ng-dirty">
+                        <span *ngIf="itemForm.controls['quantity'].errors" class="text-danger">Please Enter Quantity.</span>
+                      </div>
+                    </div>
+                    <div class="mb-3">
+                      <label for="status" class="form-label">Status</label>
+                      <select class="form-control" name="status" id="status" formControlName="status">
+                        <option value="null">Choose Status</option>
+                        <option value="Initiated">Initiated</option>
+                        <option value="Complete">Complete</option>
+                      </select>
+                      <div *ngIf="itemForm.controls['status'].invalid && (itemForm.controls['status'].dirty || itemForm.controls['status'].touched)" class="ng-dirty">
+                        <span *ngIf="itemForm.controls['status'].errors" class="text-danger">Please choose status.</span>
+                      </div>
+                    </div>
+                  </div>
+               
+                  <div *ngIf="showMessage" class="alert alert-success mt-4" role="alert">
+                    {{ responseMessage }}
+                  </div>
+                </div>
+                <div class="col-md-2">
+                  <div class="d-grid">
+                    <br>
+                    <button class="btn btn-outline-dark mt-1" type="submit">Submit</button>
+                  </div>
+                </div>
+          </form>
       </div>
-    </div>
-  
-    <div>
-      <label for="date">Order Date:</label>
-      <input id="date" formControlName="date" type="date">
-      <div *ngIf="itemForm.get('date')?.invalid && itemForm.get('date')?.touched">
-        Order date is required and must be in the format YYYY-MM-DD.
-      </div>
-    </div>
-  
-    <div>
-        <label for="hospital">Hospital:</label>
-        <!-- <select id="hospital" formControlName="hospital" (change)="onHospitalSelect($event.target.value)"> -->
-            <select>
-          <option *ngFor="let hospital of hospitalList" [value]="hospital">{{ hospital }}</option>
-        </select>
-        <div *ngIf="itemForm.get('hospital')?.invalid && itemForm.get('hospital')?.touched">
-          Hospital is required.
-        </div>
-      </div>
-  
-    <div>
-      <label for="quantity">Quantity:</label>
-      <input id="quantity" formControlName="quantity" type="number">
-      <div *ngIf="itemForm.get('quantity')?.invalid && itemForm.get('quantity')?.touched">
-        Quantity is required and must be at least 1.
-      </div>
-    </div>
-  
-    <div>
-      <label for="equipment">Equipment:</label>
-      <select id="equipment" formControlName="equipment">
-        <option *ngFor="let equipment of equipmentList" [value]="equipment">{{ equipment }}</option>
-      </select>
-      <div *ngIf="itemForm.get('equipment')?.invalid && itemForm.get('equipment')?.touched">
-        Equipment is required.
-      </div>
-    </div>
-  
-    <button type="submit">Submit</button>
-    <div *ngIf="showError">{{ errorMessage }}</div>
-  </form>
-  
-  <div *ngIf="showMessage">{{ responseMessage }}</div>
-  
+  </div>
+</div>
