wecp initial commit

--- a/client/src/app/dashbaord/dashbaord.component.html
+++ b/client/src/app/dashbaord/dashbaord.component.html
@@ -1,22 +1,7 @@
 <div class="row text-center">
-<h1 class="text-capitalize">Medical Equipment & Tracking System</h1>
-</div>
-<!-- <div class="row text-center">
-    <h1 class="text-capitalize">Medical Equipment & Tracking System</h1>
-    </div>
+    <h1 class="text-capitalize">MediTrack</h1>
+    <h4>Your Health, Our Priority!</h4>
     
-    <div *ngIf="roleName==='HOSPITAL'">
-        <app-createhospital></app-createhospital>
-        <app-orders></app-orders>
-        <app-maintenance></app-maintenance>
-        <app-requestequipment></app-requestequipment>
-        <app-schedule-maintenance></app-schedule-maintenance>
-    </div>
-    
-    <div *ngIf="roleName==='TECHNICIAN'">
-        <app-maintenance></app-maintenance>
-    </div>
-    
-    <div *ngIf="roleName==='SUPPLIER'">
-        <app-orders></app-orders>
-    </div> -->
+  
+  
+  
