--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
-  <a class="navbar-brand" href="#">Medical E&T System</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3 pb-0">
+  <!-- <a class="navbar-brand" href="#">MediTrack</a> -->
+
+  <a class="navbar-brand pt-0">
+    MediTrack
+    <span class="navbar-tagline">Your Health, Our Priority</span>
+  </a>
+  <!-- <marquee>  welcome To MediTrack </marquee> -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+ 
+<li *ngIf="IsLoggin" class="nav-item nav-link text-dark fw-semibold marquee-container">
+                  <marquee>  Welcome {{user}} </marquee>
+                </li>
+ 
   <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="col-11">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" *ngIf="roleName === 'HOSPITAL'" [routerLink]="['/createhospital']">Create Hospital</a>
@@ -14,8 +26,19 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" *ngIf="roleName === 'HOSPITAL'" [routerLink]="['/requestequipment']">Request Equipment</a>
+      </li>
+ 
+      
+      <li class="nav-item">
+        <a class="nav-link" *ngIf="roleName === 'HOSPITAL'" [routerLink]="['/maintenance']">View Maintenances</a>
  
       </li>
+
+   
+    <li class="nav-item">
+      <a class="nav-link" *ngIf="roleName === 'HOSPITAL'" [routerLink]="['/orders']">View Orders</a>
+
+    </li>
      
       <li class="nav-item">
         <a class="nav-link" *ngIf="roleName === 'TECHNICIAN'" [routerLink]="['/maintenance']">Maintenance</a>
@@ -24,23 +47,29 @@
         <a class="nav-link" *ngIf="roleName === 'SUPPLIER'" [routerLink]="['/orders']">Orders</a>
       </li>
     </ul>
- 
-    <!-- Login/Logout buttons -->
-    <ul class="navbar-nav">
-      <li *ngIf="!IsLoggin" class="nav-item">
-        <a class="nav-link" [routerLink]="['/login']">Login</a>
-      </li>
-      <li *ngIf="IsLoggin" class="nav-item">
-        <a class="nav-link" (click)="logout()" [routerLink]="['/login']">Logout</a>
-      </li>
-    </ul>
   </div>
+  
+  <!-- <marquee>  Welcome To MediTrack </marquee> -->
+    <!-- Login/Logout buttons -->
+    <div class="col-1">
+      <ul class="navbar-nav">
+        <li *ngIf="!IsLoggin" class="nav-item">
+          <a class="nav-link login-btn" [routerLink]="['/login']">Login</a>
+        </li>
+        <li *ngIf="IsLoggin" class="nav-item">
+          <a class="nav-link" (click)="logout()" [routerLink]="['/login']">Logout</a>
+        </li>
+      </ul>
+    </div>
+</div>
+
 </nav>
  
 <body  >
   <div class="container mt-4 mx-5">
     <router-outlet>    
     </router-outlet>
+    <!-- <app-footer></app-footer> -->
   </div>
  
 </body>
