--- a/client/src/app/createhospital/createhospital.component.html
+++ b/client/src/app/createhospital/createhospital.component.html
@@ -1,12 +1,14 @@
 <div class="d-flex justify-content-between mt-4">
   <h2 class="mb-0">Manage Hospital</h2>  
-
+ 
 </div>
-<div class="row mt-3">
-  <div class="card">
+
+
+<div class="row mt-3 bg-transparent">
+  <div class="card bg-transparent">
       <div class="card-header">
       Add Hospital
-        </div>
+        
       <div class="card-body">
           <form class="mb-3 mt-md-4" [formGroup]="itemForm" (ngSubmit)="onSubmit()">
               <div class="row">
@@ -42,28 +44,28 @@
                         </div>
                   </div>
               </div>
-            
-             
-            
+                         
+           
              
             </form>
       </div>
   </div>
 </div>
 <div class="row mt-3">
-  <div class="card">
-      <div class="card-header">Hospital Information</div>
+  <div class="card bg-transparent">
+      <div class="card-header bg-transparent">Hospital Information</div>
   </div>
-  <div class="card-body">
-      <div class="table-responsive">
-          <table class="table">
+  <div class="card-body bg-transparent">
+      <div class="table-responsive bg-transparent">
+          <table class="table bg-transparent">
               <thead>
                   <tr>
-                      <th>Sr#</th>
+                      <th>Sno</th>
                       <th>Hospital Name</th>
                       <th>Location</th>
-                 
+                    
                       <th>Action</th>
+                      <th>Delete</th>
                   </tr>
               </thead>
               <tbody>
@@ -71,19 +73,78 @@
                     <td>{{hospital.id}}</td>
                       <td>{{hospital.name}}</td>
                       <td>{{hospital.location}}</td>
-                
+               
                       <td>
                           <button data-bs-toggle="modal" (click)="Addequipment(hospital)" data-bs-target="#driverModal" class="btn btn-primary">Assign Equipments</button>
+                      </td>
+                      <td>
+                        <button (click)="delete(hospital.id)" class="btn btn-primary">Delete</button>
                       </td>
                   </tr>
               </tbody>
           </table>
       </div>
   </div>
-  
 </div>
-
-
+<div class="row mt-3">
+  <!-- <div class="card mt-4">
+      <div class="card-header">
+          <h4>Hospital Information</h4>
+      </div>
+      <div id="DataTable" class="card-body">
+          <table id="table_box_bootstrap" class="table table-bordered">
+              <thead>
+                  <tr>
+                    <th>Sno</th>
+                    <th>Hospital Name</th>
+                    <th>Location</th>
+                  
+                    <th>Action</th>
+                    <th>Delete</th>
+                  </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let hospital of hospitalList">
+                  <td>{{hospital.id}}</td>
+                    <td>{{hospital.name}}</td>
+                    <td>{{hospital.location}}</td>
+             
+                    <td>
+                        <button data-bs-toggle="modal" (click)="Addequipment(hospital)" data-bs-target="#driverModal" class="btn btn-primary">Assign Equipments</button>
+                    </td>
+                    <td>
+                      <button (click)="delete(hospital.id)" class="btn btn-primary">Delete</button>
+                    </td>
+                </tr>
+            </tbody>
+          </table>
+   
+          <!-- Pagination Controls -->
+          <!-- <ul class="pagination">
+              <li [class.disabled]="currentPage === 1" (click)="goToPage(1)">
+                  <a href="javascript:void(0)">First</a>
+              </li>
+              <li [class.disabled]="currentPage === 1" (click)="goToPage(currentPage - 1)">
+                  <a href="javascript:void(0)">Previous</a>
+              </li> -->
+   
+              <!-- Dynamic Page Numbers -->
+              <!-- <li *ngFor="let page of [].constructor(totalPages); let i = index"
+                  [class.active]="i + 1 === currentPage" (click)="goToPage(i + 1)">
+                  <a href="javascript:void(0)">{{i + 1}}</a>
+              </li>
+   
+              <li [class.disabled]="currentPage === totalPages" (click)="goToPage(currentPage + 1)">
+                  <a href="javascript:void(0)">Next</a>
+              </li>
+              <li [class.disabled]="currentPage === totalPages" (click)="goToPage(totalPages)">
+                  <a href="javascript:void(0)">Last</a>
+              </li>
+          </ul>
+      </div>  -->
+</div>
+ 
+ 
 <div class="modal fade" id="driverModal" tabindex="-1" aria-labelledby="driverModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -122,7 +183,7 @@
                       </div>
                   </div>
                
-                  
+                 
               </div>
               <div *ngIf="showMessage" class="alert alert-success mt-4" role="alert">
                 {{responseMessage}}
