--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,45 +1,43 @@
 <div class="vh-100 d-flex justify-content-center align-items-center">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row d-flex justify-content-center">
-      <div class="col-12 col-md-8 col-lg-6">
-        <div class="border border-3 border-primary"></div>
-        <div class="card bg-white">
+      <div class="col-12 col-md-8 col-lg-6 glass-card">
+        <div class="card bg-transparent">
           <div class="card-body p-5">
-            <form class="mb-3 mt-md-4" [formGroup]="itemForm" (ngSubmit)="onLogin()">
-              <h2 class="fw-bold mb-2 text-uppercase ">Medical Equipment & Tracking System</h2>
-              <p class=" mb-5">Please enter your user and password!</p>
-              <div class="mb-3">
-                <label for="username" class="form-label ">Username</label>
-                <input type="username" name ="username"formControlName="username" [(ngModel)]="formModel.username" class="form-control" id="username" placeholder="name@example.com">
-                <div *ngIf="itemForm.controls['username'].invalid && (itemForm.controls['username'].dirty || itemForm.controls['username'].touched)"
-                class="ng-dirty">
-                <span *ngIf="itemForm.controls['username'].errors">
-                  <span class="text-danger">Please Enter username .</span>
-                </span>
+            <form [formGroup]="itemForm" (ngSubmit)="onLogin()">
+              <h3 class="fw-bold mb-2 text-uppercase text-white">MediTrack</h3>
+              <p class="text-white1">Please enter your username and password!</p>
+              
+              <div class="form-group mb-3">
+                <label for="username" class="form-label text-white">Username</label>
+                <input type="text" formControlName="username" class="form-control" id="username" placeholder="Username">
+                <div *ngIf="itemForm.controls['username'].invalid && (itemForm.controls['username'].dirty || itemForm.controls['username'].touched)" class="text-danger">
+                  <span *ngIf="itemForm.controls['username'].errors">
+                    Please enter your username.
+                  </span>
+                </div>
               </div>
+              
+              <div class="form-group mb-3">
+                <label for="password" class="form-label text-white">Password</label>
+                <input type="password" formControlName="password" class="form-control" id="password" placeholder="Password">
+                <div *ngIf="itemForm.controls['password'].invalid && (itemForm.controls['password'].dirty || itemForm.controls['password'].touched)" class="text-danger">
+                  <span *ngIf="itemForm.controls['password'].errors">
+                    Please enter your password.
+                  </span>
+                </div>
               </div>
-              <div class="mb-3">
-                <label for="password" class="form-label ">Password</label>
-                <input type="password" name="password"  formControlName="password" [(ngModel)]="formModel.password" class="form-control" id="password" placeholder="*******">
-                <div *ngIf="itemForm.controls['password'].invalid && (itemForm.controls['password'].dirty || itemForm.controls['password'].touched)"
-                class="ng-dirty">
-                <span *ngIf="itemForm.controls['password'].errors">
-                  <span class="text-danger">Please Enter password .</span>
-                </span>
-              </div>
-              </div>
- 
+
               <div class="d-grid">
-                <button class="btn btn-outline-dark" type="submit">Login</button>
+                <button class="btn btn-outline-light" type="submit">Login</button>
+              </div>
+              
+              <p class="mb-0 text-center text-white1 mt-3">Don't have an account? <a (click)="registration()" class="text-primary fw-bold">Register</a></p>
+              
+              <div *ngIf="showError" class="alert alert-danger mt-3" role="alert">
+                {{errorMessage}}
               </div>
             </form>
-            <div>
-              <p class="mb-0  text-center">Don't have an account? <a (click)="registration()"
-                  class="text-primary fw-bold">Registration</a></p>
-            </div>
-            <div *ngIf="showError" class="alert alert-danger" role="alert">
-              {{errorMessage}}
-            </div>
           </div>
         </div>
       </div>
