--- a/client/src/app/login/login.component.scss
+++ b/client/src/app/login/login.component.scss
@@ -1,3 +1,128 @@
-a{
+// body {
+//   margin: 0;
+//   padding: 0;
+//   font-family: Roboto, sans-serif;
+//   background: linear-gradient(120deg, #007bff, #d0314c);
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   height: 100vh;
+//   overflow: hidden;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, sans-serif;
+    //background: linear-gradient(120deg, #007bff, #d0314c);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  // .mb-3{
+  //   position:sticky;
+  // }
+  
+  .col-12 {
+    margin-top: 40px;
+  }
+  
+  .glass-card {
+    backdrop-filter: blur(5px);
+    background: rgba(243, 243, 243, 0.224);
+    border-radius: 15px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.557);
+  }
+  
+  .card{
+    border: 0px;
+    display: flex;
+  }
+  
+  .form-control {
+    background-color: rgb(182 223 241 / 27%) !important;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    color: rgb(0, 0, 0);
+    overflow: hidden;
+    border-radius: 5px;
+  
+    &:focus {
+      background-color: rgba(255, 255, 255, 0.3) !important;
+      border-color: rgba(255, 255, 255, 0.8);
+    }
+  }
+  
+  .btn {
+    width: 180px;
+    height: 50px;
     cursor: pointer;
-}
+    background:rgb(76, 151, 192);
+    color: white;
+    border: 2px solid #0b68bf;
+    outline: none;
+    transition: 1s ease-in-out;
+  }
+  
+  .d-grid{
+    justify-content: center;
+    align-items: center;
+  }
+  
+  // svg {
+  //   position: absolute;
+  //   left: 0;
+  //   //top: 0;
+  //   fill: none;
+  //   //stroke: #fff;
+  //   stroke-dasharray: 150 480;
+  //   stroke-dashoffset: 150;
+  //   transition: 1s ease-in-out;
+  // }
+  
+  .btn:hover {
+    transition: 1s ease-in;
+    //background: #1d5b99;
+    background:fixed;
+    color: white;
+    border: 2px solid #0059ac;
+  }
+  
+    // .btn:hover svg {
+    //   stroke-dashoffset: -480;
+    // }
+  
+  .text-primary {
+    color: rgb(0 34 84) !important;
+  }
+  h3
+  {
+    text-align: center;
+  }
+  
+  .text-primary:hover {
+    cursor: pointer;
+  }
+  
+  .text-white {
+    color: rgb(0, 0, 0) !important;
+  }
+  
+  .text-white1 {
+    color: rgb(66, 66, 66) !important;
+  }
+  
+  .container-fluid {
+    //background-image: url('/assets/jiji.jpg');
+    background-size: 100% 100%;
+    background-position: center;
+   background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100vh;
+    overflow: hidden;
+  }
