--- a/client/src/app/orders/orders.component.html
+++ b/client/src/app/orders/orders.component.html
@@ -1,84 +1,168 @@
 <div class="d-flex justify-content-between mt-4">
-    <h2 class="mb-0">Manage Orders </h2>  
- 
-  </div>
- 
-  <div class="row mt-3">
- 
-        <div class="card">
-            <div class="card-header">Orders  Information</div>
+  <h2 class="mb-0">Manage Orders </h2>  
+
+</div>
+
+<div class="row mt-3">
+
+      <!-- <div class="card">
+          <div class="card-header">Orders  Information</div>
+      </div>
+      <div>
+        <input type="text" placeholder="Search By Hospital Name" [(ngModel)]="searchTitle" (input)="searchCharity() "class="rounded border-0 bg-light w-25 p-2 search-input">
+      </div>
+      <div class="card-body">
+          <div class="table-responsive">
+              <table class="table">
+                  <thead>
+                      <tr>
+                          <th>SNo</th>
+                          <th>Order Date
+                            <button (click)="toggleSortOrder()"> {{ sortOrder === 'asc' ? '⬇' : '⬆'}}</button>
+                          </th>
+
+                          <th>Quantity</th>
+                          <th>Status</th>      
+                          <th>Equipment</th>  
+                          <th>Hospital</th>                
+                          <th>Edit</th>
+                          <th>Delete</th>
+                      </tr>
+                  </thead>
+                  <tbody *ngFor="let val of orderList">
+                      <tr >
+                          <td>{{val.id}}</td>
+                          <td>{{val.orderDate | date: 'dd-MMM-yyyy'}}</td>                  
+                          <td>{{val.quantity}}</td>
+                          <td>{{val.status}}</td>
+                          <td>
+                              <p>Id:{{val.equipment.id}}</p>
+                              <p>Name:{{val.equipment.name}}</p>
+                              <p>Description:{{val.equipment.description}}</p>
+                          </td>
+                          <td>
+                              <p>Id:{{val.equipment.hospital.id}}</p>
+                              <p>Name:{{val.equipment.hospital.name}}</p>
+                              <!-- <p>Description:{{val.equipment.hospital.description}}</p> -->
+                          <!-- </td>
+                          <td>
+                              <button  data-bs-toggle="modal" (click)="edit(val)" data-bs-target="#driverModal"  class="btn btn-warning" [disabled]="val.status === 'Complete'">Update Status</button>
+                          </td>
+                          <td>
+                            <button   (click)="onDelete(val.id)" class="btn btn-warning">Delete</button>
+                          </td>
+                          <br>
+                     
+                      </tr>
+                     
+                  </tbody>
+              </table>
+          </div>
+      </div>  -->
+      <div class="card mt-4">
+        <div class="card-header">
+            <h4>Order Information</h4>
         </div>
-        <div class="card-body">
-            <div class="table-responsive">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Sr#</th>
-                            <th>Order Date</th>
-                            <th>Quality</th>
-                            <th>Status</th>      
-                            <th>Equipment</th>  
-                            <th>Hospital</th>                
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody *ngFor="let val of orderList">
-                        <tr >
-                            <td>{{val.id}}</td>
-                            <td>{{val.orderDate | date: 'dd-MMM-yyyy'}}</td>                  
-                            <td>{{val.Quality}}</td>
-                            <td>{{val.status}}</td>
-                            <td>
-                                <p>Id:{{val.equipment.id}}</p>
-                                <p>Name:{{val.equipment.name}}</p>
-                                <p>Description:{{val.equipment.description}}</p>
-                            </td>
-                            <td>
-                                <p>Id:{{val.equipment.hospital.id}}</p>
-                                <p>Name:{{val.equipment.hospital.name}}</p>
-                                <p>Description:{{val.equipment.hospital.description}}</p>
-                            </td>
-                            <td>
-                                <button  data-bs-toggle="modal" (click)="edit(val)" data-bs-target="#driverModal"  class="btn btn-warning">Update Status</button>
-                            </td>
-                            <br>
-                       
-                        </tr>
-                       
-                    </tbody>
-                </table>
+        <div id="DataTable" class="card-body">
+            <table id="table_box_bootstrap" class="table table-bordered">
+                <thead>
+                    <tr>
+                      <th>SNo</th>
+                      <th>Order Date
+                        <button (click)="toggleSortOrder()"> {{ sortOrder === 'asc' ? '⬇' : '⬆'}}</button>
+                      </th>
+
+                      <th>Quantity</th>
+                      <th>Status</th>      
+                      <th>Equipment</th>  
+                      <th>Hospital</th>                
+                      <th>Edit</th>
+                      <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody *ngFor="let val of orderList">
+                  <tr >
+                      <td>{{val.id}}</td>
+                      <td>{{val.orderDate | date: 'dd-MMM-yyyy'}}</td>                  
+                      <td>{{val.quantity}}</td>
+                      <td>{{val.status}}</td>
+                      <td>
+                          <p>Id:{{val.equipment.id}}</p>
+                          <p>Name:{{val.equipment.name}}</p>
+                          <p>Description:{{val.equipment.description}}</p>
+                      </td>
+                      <td>
+                          <p>Id:{{val.equipment.hospital.id}}</p>
+                          <p>Name:{{val.equipment.hospital.name}}</p>
+                          <!-- <p>Description:{{val.equipment.hospital.description}}</p> -->
+                      </td>
+                      <td>
+                          <button  data-bs-toggle="modal" (click)="edit(val)" data-bs-target="#driverModal"  class="btn btn-warning" [disabled]="val.status === 'Complete'">Update Status</button>
+                      </td>
+                      <td>
+                        <button   (click)="onDelete(val.id)" class="btn btn-warning">Delete</button>
+                      </td>
+                      <br>
+                 
+                  </tr>
+                 
+              </tbody>
+            </table>
+     
+            <!-- Pagination Controls -->
+            <ul class="pagination">
+                <li [class.disabled]="currentPage === 1" (click)="goToPage(1)">
+                    <a href="javascript:void(0)">First</a>
+                </li>
+                <li [class.disabled]="currentPage === 1" (click)="goToPage(currentPage - 1)">
+                    <a href="javascript:void(0)">Previous</a>
+                </li>
+     
+                <!-- Dynamic Page Numbers -->
+                <li *ngFor="let page of [].constructor(totalPages); let i = index"
+                    [class.active]="i + 1 === currentPage" (click)="goToPage(i + 1)">
+                    <a href="javascript:void(0)">{{i + 1}}</a>
+                </li>
+     
+                <li [class.disabled]="currentPage === totalPages" (click)="goToPage(currentPage + 1)">
+                    <a href="javascript:void(0)">Next</a>
+                </li>
+                <li [class.disabled]="currentPage === totalPages" (click)="goToPage(totalPages)">
+                    <a href="javascript:void(0)">Last</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
+ 
+</div>
+
+<div class="modal fade" id="driverModal" tabindex="-1" aria-labelledby="driverModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="driverModalLabel">Update Status </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+          <select [(ngModel)]="statusModel.newStatus"  class="form-control" name="" id="">
+            <option value="null">Choose Status</option>
+            <option value="Initiated">Initiated</option>
+            <option value="Complete">Complete</option>
+          </select>
+
+          <div *ngIf="showMessage" class="alert alert-success mt-4" role="alert">
+              {{responseMessage}}
             </div>
-        </div>
- 
- 
-   
-  </div>
- 
-  <div class="modal fade" id="driverModal" tabindex="-1" aria-labelledby="driverModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="driverModalLabel">Update Status </h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <select [(ngModel)]="statusModel.newStatus"  class="form-control" name="" id="">
-              <option value="null">Choose Status</option>
-              <option value="Initiated">Initiated</option>
-              <option value="Complete">Complete</option>
-            </select>
- 
-            <div *ngIf="showMessage" class="alert alert-success mt-4" role="alert">
-                {{responseMessage}}
-              </div>
-              <div *ngIf="showError" class="alert alert-danger" role="alert">
-                {{errorMessage}}
-              </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" (click)="update()" >Save</button>
-        </div>
+            <div *ngIf="showError" class="alert alert-danger" role="alert">
+              {{errorMessage}}
+            </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="update()" >Save</button>
       </div>
     </div>
   </div>
+</div>
