--- a/client/src/app/orders/orders.component.html
+++ b/client/src/app/orders/orders.component.html
@@ -77,7 +77,9 @@
                       <th>Equipment</th>  
                       <th>Hospital</th>                
                       <th>Edit</th>
-                      <th>Delete</th>
+                      <th *ngIf="role==='HOSPITAL'">
+                        Delete
+                      </th>
                     </tr>
                 </thead>
                 <tbody *ngFor="let val of orderList">
@@ -99,7 +101,10 @@
                       <td>
                           <button  data-bs-toggle="modal" (click)="edit(val)" data-bs-target="#driverModal"  class="btn btn-warning" [disabled]="val.status === 'Complete'">Update Status</button>
                       </td>
-                      <td>
+                      <!-- <td>
+                        <button   (click)="onDelete(val.id)" class="btn btn-warning">Delete</button>
+                      </td> -->
+                      <td *ngIf="role==='HOSPITAL'">
                         <button   (click)="onDelete(val.id)" class="btn btn-warning">Delete</button>
                       </td>
                       <br>
