--- a/client/src/app/createhospital/createhospital.component.html
+++ b/client/src/app/createhospital/createhospital.component.html
@@ -52,7 +52,67 @@
   </div>
 </div>
 <div class="row mt-3">
-  <div class="card bg-transparent">
+  <div class="card">
+   
+</div>
+
+<div class="card-body">
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+                <tr>
+                  <th>Sno</th>
+                  <th>Hospital Name</th>
+                  <th>Location</th>
+                
+                  <th>Action</th>
+                  <th>Delete</th>
+                </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let hospital of hospitalList">
+                <td>{{hospital.id}}</td>
+                  <td>{{hospital.name}}</td>
+                  <td>{{hospital.location}}</td>
+           
+                  <td>
+                      <button data-bs-toggle="modal" (click)="Addequipment(hospital)" data-bs-target="#driverModal" class="btn btn-primary">Assign Equipments</button>
+                  </td>
+                  <td>
+                    <button (click)="delete(hospital.id)" class="btn btn-primary">Delete</button>
+                  </td>
+              </tr>
+          </tbody>
+        </table>
+        <!-- Pagination Controls -->
+        <ul class="pagination">
+          <li [class.disabled]="currentPage === 1" (click)="goToPage(1)">
+              <a href="javascript:void(0)">First</a>
+          </li>
+          <li [class.disabled]="currentPage === 1" (click)="goToPage(currentPage - 1)">
+              <a href="javascript:void(0)">Previous</a>
+          </li>
+
+          <!-- Dynamic Page Numbers -->
+          <li *ngFor="let page of [].constructor(totalPages); let i = index"
+              [class.active]="i + 1 === currentPage" (click)="goToPage(i + 1)">
+              <a href="javascript:void(0)">{{i + 1}}</a>
+          </li>
+
+          <li [class.disabled]="currentPage === totalPages" (click)="goToPage(currentPage + 1)">
+              <a href="javascript:void(0)">Next</a>
+          </li>
+          <li [class.disabled]="currentPage === totalPages" (click)="goToPage(totalPages)">
+              <a href="javascript:void(0)">Last</a>
+          </li>
+      </ul>
+  </div>
+</div>
+
+    </div>
+
+
+  <!-- <div class="card bg-transparent">
       <div class="card-header bg-transparent">Hospital Information</div>
   </div>
   <div class="card-body bg-transparent">
@@ -85,63 +145,7 @@
           </table>
       </div>
   </div>
-</div>
-<div class="row mt-3">
-  <!-- <div class="card mt-4">
-      <div class="card-header">
-          <h4>Hospital Information</h4>
-      </div>
-      <div id="DataTable" class="card-body">
-          <table id="table_box_bootstrap" class="table table-bordered">
-              <thead>
-                  <tr>
-                    <th>Sno</th>
-                    <th>Hospital Name</th>
-                    <th>Location</th>
-                  
-                    <th>Action</th>
-                    <th>Delete</th>
-                  </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let hospital of hospitalList">
-                  <td>{{hospital.id}}</td>
-                    <td>{{hospital.name}}</td>
-                    <td>{{hospital.location}}</td>
-             
-                    <td>
-                        <button data-bs-toggle="modal" (click)="Addequipment(hospital)" data-bs-target="#driverModal" class="btn btn-primary">Assign Equipments</button>
-                    </td>
-                    <td>
-                      <button (click)="delete(hospital.id)" class="btn btn-primary">Delete</button>
-                    </td>
-                </tr>
-            </tbody>
-          </table>
-   
-          <!-- Pagination Controls -->
-          <!-- <ul class="pagination">
-              <li [class.disabled]="currentPage === 1" (click)="goToPage(1)">
-                  <a href="javascript:void(0)">First</a>
-              </li>
-              <li [class.disabled]="currentPage === 1" (click)="goToPage(currentPage - 1)">
-                  <a href="javascript:void(0)">Previous</a>
-              </li> -->
-   
-              <!-- Dynamic Page Numbers -->
-              <!-- <li *ngFor="let page of [].constructor(totalPages); let i = index"
-                  [class.active]="i + 1 === currentPage" (click)="goToPage(i + 1)">
-                  <a href="javascript:void(0)">{{i + 1}}</a>
-              </li>
-   
-              <li [class.disabled]="currentPage === totalPages" (click)="goToPage(currentPage + 1)">
-                  <a href="javascript:void(0)">Next</a>
-              </li>
-              <li [class.disabled]="currentPage === totalPages" (click)="goToPage(totalPages)">
-                  <a href="javascript:void(0)">Last</a>
-              </li>
-          </ul>
-      </div>  -->
+</div> -->
 </div>
  
  
